Archive2/e4/5ac05ec2485425/output
main.cpp:1:4: error: use of undeclared identifier 'Concurrency'
  (Concurrency::index<1> idx) restrict(amp) {
   ^
main.cpp:1:22: error: expected ')'
  (Concurrency::index<1> idx) restrict(amp) {
                     ^
main.cpp:1:3: note: to match this '('
  (Concurrency::index<1> idx) restrict(amp) {
  ^
main.cpp:19:14: error: expected unqualified-id
            });
             ^
3 errors generated.
